<?xml version="1.0"?>
<package format="2">
  <name>detection_tensorrt_impl</name>
  <version>0.1.0</version>
  <description>The detection_tensorrt_impl of cognition_bus package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shajiansong@todo.todo">shajiansong</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp rospy</build_depend>
  <build_export_depend>roscpp rospy</build_export_depend>
  <exec_depend>roscpp rospy</exec_depend>

  <depend>pluginlib</depend>
  <depend>cv_bridge</depend>
  <depend>cognition_bus</depend>
  <depend>cognition_bus_detection</depend>
  <depend>mobilenet_ssd_tensorrt</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <cognition_bus plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
